deployments on aws/polus-notebooks-hub/backend-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: polus-notebooks-hub-backend-deployment
# spec:
#   selector:
#     matchLabels:
#       app: polus-notebooks-hub-backend
#   replicas: 2
#   template:
#     metadata:
#       labels:
#         app: polus-notebooks-hub-backend
#     spec:
#       # volumes:
#       #   - name: task-pv-storage
#       #     persistentVolumeClaim:
#       #       claimName: task-pv-claim
#       containers:
#         - name: polus-notebooks-hub-backend
#           image: swazonic/polus-notebooks-hub-backend:latest
#           ports:
#             - containerPort: 8002
#           # volumeMounts:
#           #   - mountPath: "/usr/share/sandbox/"
#           #     name: task-pv-storage


apiVersion: apps/v1
kind: Deployment
metadata:
  name: polus-notebooks-hub-backend-deployment
spec:
  selector:
    matchLabels:
      app: polus-notebooks-hub-backend
  replicas: 2
  template:
    metadata:
      labels:
        app: polus-notebooks-hub-backend
    spec:
      containers:
        - name: polus-notebooks-hub-backend
          image: swazonic/polus-notebooks-hub-backend:latest
          ports:
            - containerPort: 8002
          volumeMounts:
            - mountPath: "/opt/shared/notebooks"
              name: notebookspv
      volumes:
        - name: notebookspv
          persistentVolumeClaim:
            claimName: pvc-polus-notebooks
