deployments on aws/polus-notebooks-hub/frontend-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: polus-notebooks-hub-frontend-service
spec:
  selector:
    app: polus-notebooks-hub-frontend
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      nodePort: 32000
