deployments on aws/polus-notebooks-hub/frontend-service.yaml
# External Notebooks Hub UI Service definition
# apiVersion: v1
# kind: Service
# metadata:
#   name: notebooks-hub-frontend-service
#   namespace: polus-notebooks
# spec:
#   type: ClusterIP
#   ports:
#   - port: 4200
#     name: http
#     targetPort: 80
#   selector:
#     application: polus-notebooks-hub-frontend
# {"apiVersion":"v1","kind":"Service","metadata":
# {"annotations":{},"name":"wipp-tensorboard","namespace":"default"},
# "spec":{"ports":[{"name":"6006","port":6006,"targetPort":6006}],
# "selector":{"app":"wipp-tensorboard"},"type":"NodePort"}}


# External frontend UI Service definition
apiVersion: v1
kind: Service
metadata:
  name: notebooks-hub-frontend-service
  namespace: polus-notebooks
spec:
  type: NodePort
  ports:
  - port: 4200
    name: "4200"
    targetPort: 4200
  selector:
    app: polus-notebooks-hub-frontend

# make sure the service selection matches the pods labels
